# awsim-autonomous-research

./: .gitignore  ASTAR_TEST_GUIDE.md  FINAL_UPDATE_STATUS.md  LICENSE  PATH_PLANNER_README.md  README.md  frames_2025-08-05_16.02.17.gv  log_output.txt  test_path_planner.md
config/: dynamic_path_planner_params.yaml  static_path_planner_params.yaml
launch/: dynamic_path_planner.launch.py  static_path_planner.launch.py
src/awsim_bringup/: CMakeLists.txt  package.xml
src/awsim_bringup/launch/: awsim_full.launch.py  awsim_full_with_3d_mcl.launch.py  awsim_localization.launch.py  awsim_path_planning.launch.py  sensor_logger.launch.py
src/awsim_bringup/rviz/: awsim.rviz
src/awsim_controller/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
src/awsim_controller/config/: pure_pursuit_params.yaml
src/awsim_controller/include/awsim_controller/: pure_pursuit_controller.hpp
src/awsim_controller/launch/: pure_pursuit.launch.py
src/awsim_controller/src/: pp_node.cpp  pure_pursuit_controller.cpp
src/awsim_localization/: CMakeLists.txt  README.md  package.xml
src/awsim_localization/include/: awsim_localization_node.hpp
src/awsim_localization/include/awsim_localization/: ndt_matcher.hpp
src/awsim_localization/launch/: awsim_localization.launch.py  ndt_localization.launch.py
src/awsim_localization/rviz/: awsim_localization.rviz
src/awsim_localization/src/: awsim_localization_node.cpp  main.cpp  scan_matching_node.cpp
src/awsim_object_tracker/: CMakeLists.txt  README.md  README_new.md  README_old.md  package.xml
src/awsim_object_tracker/include/awsim_object_tracker/: kalman_filter.hpp  object_tracker.hpp  perception_pipeline.hpp  tracker_node.hpp
src/awsim_object_tracker/launch/: tracker.launch.py
src/awsim_object_tracker/scripts/: tracker_validator.py
src/awsim_object_tracker/src/: kalman_filter.cpp  object_tracker.cpp  perception_pipeline.cpp  tracker_node.cpp
src/awsim_path_planner/: CMakeLists.txt  README.md  package.xml
src/awsim_path_planner/config/: path_planner_params.yaml
src/awsim_path_planner/include/awsim_path_planner/: astar_planner.hpp  hd_map_manager.hpp  lanelet_visualizer_node.hpp  path_planner_node.hpp  route_planner.hpp  rrt_star_planner.hpp
src/awsim_path_planner/launch/: algorithm_comparison.launch.py  lanelet_visualizer.launch.py  path_planner.launch.py
src/awsim_path_planner/rviz/: lanelet_visualization.rviz  path_planner.rviz
src/awsim_path_planner/src/: astar_planner.cpp  hd_map_manager.cpp  lanelet_visualizer_node.cpp  main.cpp  path_planner_node.cpp  route_planner.cpp  rrt_star_planner.cpp
src/awsim_sensor_logger/: CMakeLists.txt  README.md  package.xml
src/awsim_sensor_logger/config/: sensor_logger_params.yaml
src/awsim_sensor_logger/launch/: sensor_logger.launch.py  simple_logger.launch.py  simple_sensor_logger.launch.py
src/awsim_sensor_logger/scripts/: analyze_sensor_data.py
src/awsim_sensor_logger/src/: sensor_logger_node.cpp
src/awsim_trajectory_planner/: CMakeLists.txt  README.md  STATIONARY_SAFETY_IMPROVEMENTS.md  package.xml
src/awsim_trajectory_planner/config/: trajectory_planner_params.yaml
src/awsim_trajectory_planner/docs/: QoS_Configuration.md
src/awsim_trajectory_planner/include/awsim_trajectory_planner/: cost_evaluator.hpp  obstacle_detector.hpp  trajectory_generator.hpp  trajectory_planner_node.hpp
src/awsim_trajectory_planner/launch/: trajectory_planner.launch.py
src/awsim_trajectory_planner/rviz/: trajectory_planner.rviz
src/awsim_trajectory_planner/src/: cost_evaluator.cpp  main.cpp  obstacle_detector.cpp  trajectory_generator.cpp  trajectory_planner_node.cpp
src/ground_filter/: CMakeLists.txt  README.md  package.xml
src/ground_filter/include/ground_filter/: ground_filter.hpp
src/ground_filter/launch/: ground_filter.launch.py
src/ground_filter/src/: ground_filter_node.cpp
src/multi_object_tracker/: CMakeLists.txt  README.md  package.xml
src/multi_object_tracker/include/: kalman_filter.hpp  perception_pipeline.hpp
src/multi_object_tracker/include/multi_object_tracker/: kalman_filter.hpp  object_tracker.hpp  perception_pipeline.hpp  tracker_node.hpp
src/multi_object_tracker/launch/: tracker.launch.py
src/multi_object_tracker/src/: kalman_filter.cpp  object_tracker.cpp  perception_pipeline.cpp  tracker_node.cpp
src/multi_object_tracker_msgs/: CMakeLists.txt  package.xml
src/multi_object_tracker_msgs/msg/: TrackedObject.msg
